<resources>
    <string name="app_name">CST2335_GraphicalInterfaceProgramming</string>
    <string name="ticketMaster">TicketMaster event search/Wei Li</string>
    <string name="recipeSearch">Recipe Search page/Jianchuan Li</string>
    <string name="covidCaseData">Covid-19 case data/June Li</string>
    <string name="audioDatabaseApi">The Audio Database api/name</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Instruction" translatable="false">Input name and press \"Search\"</string>
    <string name="search">Search</string>
    <string name="empty_field_toast">Input artist name</string>
    <string name="error">Error</string>
    <string name="cant_find_artist">Can not find artist</string>
    <string name="no_network">No Internet Connection</string>
    <string name="WelcomeRecipeSearch">Welcome to recipe search page, please input the recipe and ingredients, press the button to begin search</string>
    <string name="inputRecipe">Recipe: </string>
    <string name="editRecipe">"Please input the recipe you want to search here "</string>
    <string name="inputIngredients">Ingredients: </string>
    <string name="editIngredients">Please input the ingredients included in the recipe here</string>
    <string name="RecipeSearch">Press to search</string>
    <string name="Recipe_toast_message">"Only one recipe "</string>
    <string name="Ingredients_snackBar_message">Separate ingredients with \",\"</string>
    <string name="RecipeHelp">Help</string>
    <string name="recipeAlertNB">OK</string>
    <string name="recipeURL">"URL: "</string>
    <string name="recipeIngredients">"Ingredients: "</string>
    <string name="covidSearch">Search</string>
    <string name="help">Help</string>
    <string name="country">Country</string>
    <string name="fromDate">From Date(YYYY-MM-DD)</string>
    <string name="endDate">End Date(YYYY-MM-DD)</string>
    <string name="date">Date(YYYY-MM-DD)</string>
    <string name="favorite">Do you want to add the data to favorite list?</string>
    <string name="hint">Type Here</string>
    <string name="save">Add To Favorite</string>
    <string name="clear">Clear</string>
    <string name="undo">Recovery</string>
    <string name="hide">Hide</string>
    <string name="searchHeader">The Search Result</string>
    <string name="header">Welcome to Covid19 search page</string>
    <string name="homeheader">Welcome to Information Search App</string>
    <string name="introduction">This App is developed by Fighting Team. You can search Ticket,
        Recipe, Covid-19 and AudioDatabase information. Hope our app can bring convenience to your life!</string>
    <string name="author">Author: June Li</string>
    <string name="version">Version: 1.0</string>
    <string name="home">Go back to home page</string>
    <string name="recipeSearchopen">open</string>
    <string name="recipeSearchclose">close</string>
    <string name="recipeSearchFavorite">favorites</string>
    <string name="recipeSearchHelp">help</string>
    <string name="login">go back to main page</string>
    <string name="recipeSearchTitle">Recipe Search</string>
    <string name="recipeSearchAuthor">Jianchuan Li</string>
    <string name="recipeSearchVersion">1.0</string>
    <string name="recipeSearchSave">save</string>
    <string name="recipeSearchHide">hide</string>
    <string name="Recipe_save_toast_message">this recipe is saved to favorates</string>
    <string name="WelcomeCovidSearch">Welcome to Covid-19 search page. You can input the country name and date,then press
        the "SEARCH" button to search the detailed data,including province, cases. If you want to save the result, press
        "ADD TO FAVORITE" button. If you want to delete the saved record, click the specific record. </string>
    <string name="CovidErrorMsg">Please input the country name and date, or check the date format is correct</string>
    <string name="CovidErrorTitle">Error!</string>
    <string name="TicketHelp" translatable="false">Help</string>
    <string name="WelcomeTicketSearch" translatable="false">Welcome to ticket search page. Please input the city name and radius! Press the SEARCH button to begin search.</string>
    <string name="ticketAlertNB" translatable="false">OK</string>
    <string name="ticketFavorite">Press the FAVORITE button go to the favorite events page.</string>
    <string name="TicketDetailHelp">Help</string>
    <string name="TicketFavoriteSaveAs">Welcome to ticket event detail page! Press the SAVE AS FAVORITE button can save events as favorite.</string>
    <string name="ticketAlertNB1">OK</string>
    <string name="favorite_help">HELP</string>
    <string name="TicketFavoriteHelp">Help</string>
    <string name="TicketFavoriteDelete">Welcome to ticket favorite page! Long press the event can delete the chosen one.</string>
    <string name="ticketFavoriteAlertNB">OK</string>
    <string name="ticketcity">City</string>Radius
    <string name="radius">Radius</string>
    <string name="ticketsearch">SEARCH</string>
    <string name="ticketfavorite1">FAVORITE</string>
    <string name="tickethelp1">HELP</string>
    <string name="save_as_favorite">Save as favorite</string>
    <string name="tickethelp2">HELP</string>
    <string name="title">TicketMaster-event-search, written by Wei Li, version 1.0.</string>
    <string name="choice">TicketMaster, Written by Wei Li, Version number 1.0</string>
    <string name="ticketrecipe">Go To Recipe Search Page</string>
    <string name="ticketcovid">Go To Covid Search Page</string>
    <string name="ticketaudio">Go To Audio Search Page</string>
    <string name="tickethome">Home</string>
    <string name="ticketError">Error!</string>
    <string name="ticketPlease">Please input city and radius.</string>
    <string name="ticketLoad">Events has been loaded successfully!</string>
    <string name="ticketNoFound">Sorry, No events found!</string>
    <string name="ticketok">OK</string>
    <string name="ticketDelete">Do you want to delete this?</string>
    <string name="ticketYes">Yes</string>
    <string name="ticketDeleted">The item has been deleted!</string>
    <string name="ticketUndo">UNDO</string>
    <string name="ticketRecover">The Item has been recovered!</string>
    <string name="ticketNo">No</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="add_to_fav">add to Favorites</string>
    <string name="input_name">Input Name</string>
    <string name="help_tad">Help</string>
    <string name="tad_nav_open">open</string>
    <string name="tad_nav_close">close</string>
    <string name="tad_delete">Delete</string>
    <string name="organize_favorites">Organize Favorites:</string>
    <string name="songs">Songs:</string>
    <string name="RecipeInputError">Error!</string>
    <string name="RecipeErrorMessage">Recipe and ingredients can not be both blanks.</string>
    <string name="recipeSearchDelete">Delete</string>
    <string name="recipeLoad">recipes found.</string>
    <string name="recipeNoFound">Recipe not found</string>
    <string name="recipeticket">go to Ticket Search Page</string>

</resources>