<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu1"
        android:icon="@drawable/icons8_ticket"
        android:title="@string/ticketMaster"
        android:orderInCategory="100" />

    <item android:id="@+id/menu2"
        android:icon="@drawable/icons8_cooking_book"
        android:title="@string/recipeSearch"
        android:orderInCategory="200" />

    <item android:id="@+id/menu3"
        android:icon="@drawable/icons8_audio"
        android:title="@string/audioDatabaseApi"
        android:orderInCategory="300" />
    <item android:id="@+id/menu4"
        android:icon="@drawable/icons8_home"
        android:title="@string/home"
        android:orderInCategory="400" />


</menu>
