<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

<item android:id="@+id/item1"
    android:title="@string/ticketMaster"
    android:icon="@drawable/icons8_ticket"
    android:orderInCategory="100"
    app:showAsAction="always"/>
<item android:id="@+id/item2"
    android:title="@string/recipeSearch"
    android:icon="@drawable/icons8_cooking_book"
    android:orderInCategory="200"
    app:showAsAction="always"/>
<item android:id="@+id/item3"
    android:title="@string/covidCaseData"
    android:icon="@drawable/icons8_coronavirus"
    android:orderInCategory="300"
    app:showAsAction="always"/>
<item android:id="@+id/item4"
    android:title="@string/audioDatabaseApi"
    android:icon="@drawable/icons8_audio"
    android:orderInCategory="400"
    app:showAsAction="always"/>
</menu>
