<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Covid19Activity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"/>
    <LinearLayout
        android:id="@+id/line1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/country"/>
        <EditText
            android:id="@+id/country"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:hint="@string/hint"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/line2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/date"/>
        <EditText
            android:id="@+id/date"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:hint="@string/hint"/>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/entrySearch"
        android:text="@string/covidSearch" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/help"
        android:text="@string/help" />
    </LinearLayout>>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/favorite"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/savedData"
        android:layout_weight="1"/>

</LinearLayout>