<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/recipeSearchFavorite"
        android:title="@string/recipeSearchFavorite"
        android:icon="@drawable/recipe_search_favorite"
        android:orderInCategory="100"
        app:showAsAction="always"/>  <!-- This uses showAsAction=always, so look at icon= parameter -->


    <item android:id="@+id/recipeSearchHelp"
        android:orderInCategory="50"
        app:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/recipe_search_help"
        app:showAsAction="always|collapseActionView"
        android:title="@string/recipeSearchHelp"/>    <!-- This uses showAsAction=always, so look at icon= parameter -->


    <item android:id="@+id/recipeSearchLogin"
        android:icon="@drawable/recipe_search_login"
        android:title="@string/login"
        app:showAsAction="never"
        android:orderInCategory="400"/> <!-- This uses showAsAction=never, so look at title= parameter -->

</menu>