<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recipeSearchtoolbar"/>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/recipeSearchdrawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">
        <!-- THIS IS WHAT IS VISIBLE ON SCREEN:-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/inputRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inputRecipe"/>
            <EditText
                android:id="@+id/editRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editRecipe"/>
            <TextView
                android:id="@+id/inputIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inputIngredients"
                />
            <EditText
                android:id="@+id/editIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editIngredients"/>
            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/RecipeSearch" />
        </LinearLayout>

        <!-- THIS IS WHAT IS WHAT POPS OUT FROM THE SIDE:-->
        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/recipe_search_header"
            app:menu="@menu/recipe_search_menu"
            android:id="@+id/nav_view"/>

    </androidx.drawerlayout.widget.DrawerLayout>
</LinearLayout>